packages/oonCore-back/src/deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}-service
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: ${SERVICE_NAME}
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: ${PORT}
